--- a/package.json
+++ b/package.json
@@ -1,11 +1,63 @@
 {
   "name": "jpkg",
-  "version": "1.0.0",
-  "description": "package assets ",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.1",
+  "description": "static resource package tool",
+  "keywords": [],
+  "dependencies": {
+    "lodash": "^4.13.1",
+    "async": "^1.4.2"
+  },
+  "devDependencies": {
+    "combined-stream": "^1.0.5",
+    "gulp": "^3.9.0",
+    "gulp-asset-manifest": "0.0.6",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-data": "^1.2.0",
+    "gulp-if": "^2.0.0",
+    "gulp-image": "^1.2.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jsoncombine": "^1.0.3",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^6.0.1",
+    "gulp-rev-collector": "^1.0.2",
+    "gulp-rev-format": "^1.0.4",
+    "gulp-rev-replace": "^0.4.2",
+    "gulp-sass": "^2.1.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "gulp-zip": "^3.0.2",
+    "imagemin-pngquant": "^4.2.0",
+    "less": "^2.5.3",
+    "map-stream": "0.0.6",
+    "mime-types": "^2.1.11",
+    "rev-del": "^1.0.5",
+    "run-sequence": "^1.1.4",
+    "vinyl-fs": "^2.2.1",
+    "vinyl-source-stream": "^1.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "debug": "node debug app.js",
+    "start": "node app.js"
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jahon/jpkg.git"
   },
   "author": "Jahon",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jahon/jpkg/issues"
+  },
+  "homepage": "https://github.com/jahon/jpkg#readme",
+  "directories": {
+    "example": "examples",
+    "test": "test"
+  }
 }
